--- a/ARDemo/MainScreen/Base.lproj/Main.storyboard
+++ b/ARDemo/MainScreen/Base.lproj/Main.storyboard
@@ -16,6 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BrB-h1-WRS">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                            </arscnView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="oLe-zN-TQM">
+                                <rect key="frame" x="168.5" y="815" width="77" height="32"/>
+                                <segments>
+                                    <segment title="On"/>
+                                    <segment title="Off"/>
+                                </segments>
+                                <connections>
+                                    <action selector="changeMode:" destination="BV1-FR-VrT" eventType="touchUpInside" id="2Bz-bI-u70"/>
+                                </connections>
+                            </segmentedControl>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="40a-5n-tcM">
                                 <rect key="frame" x="16" y="52" width="382" height="50"/>
                                 <subviews>
@@ -55,27 +68,40 @@
                                         <color key="tintColor" red="0.13664317522746994" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" image="restart"/>
                                         <state key="highlighted" image="restart"/>
+                                        <connections>
+                                            <action selector="restartExperience" destination="BV1-FR-VrT" eventType="touchUpInside" id="yjv-NI-D9H"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
-                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BrB-h1-WRS">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
-                            </arscnView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Autoscale mode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Bp-68-EjF">
+                                <rect key="frame" x="145.5" y="786.5" width="123" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="fQZ-KI-GVf" firstAttribute="bottom" secondItem="oLe-zN-TQM" secondAttribute="bottom" constant="16" id="250-me-Igt"/>
+                            <constraint firstItem="oLe-zN-TQM" firstAttribute="top" secondItem="3Bp-68-EjF" secondAttribute="bottom" constant="8" symbolic="YES" id="9of-oC-ypn"/>
                             <constraint firstItem="40a-5n-tcM" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" constant="16" id="Bmv-Ky-52S"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
+                            <constraint firstItem="oLe-zN-TQM" firstAttribute="centerX" secondItem="U0K-SW-4ec" secondAttribute="centerX" id="Lbf-gY-5yo"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
                             <constraint firstItem="40a-5n-tcM" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" constant="8" id="YtF-uQ-L0f"/>
+                            <constraint firstItem="3Bp-68-EjF" firstAttribute="centerX" secondItem="U0K-SW-4ec" secondAttribute="centerX" id="hd1-U0-4gf"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
                             <constraint firstItem="fQZ-KI-GVf" firstAttribute="trailing" secondItem="40a-5n-tcM" secondAttribute="trailing" constant="16" id="vjZ-On-cff"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="autoscaleModeSelectionControl" destination="oLe-zN-TQM" id="6jc-4B-bXw"/>
                         <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
+                        <outlet property="sessionInfoLabel" destination="hdS-gE-Qb8" id="t96-5j-tvW"/>
+                        <outlet property="sessionInfoView" destination="uiU-ia-FDh" id="fQv-hL-z6M"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
